	PR 6913 	* listing.c (print_options): Don't call fprintf without format string.